--- a/work_in_progress/DD/DD_version_1.lyx
+++ b/work_in_progress/DD/DD_version_1.lyx
@@ -934,12 +934,6 @@ Overview architecture.
 \end_layout
 
 \begin_layout Standard
-<TODO: parlare dell'implementazione di un quarto tier adibito alla business
- logic.
- CLOUD?>
-\end_layout
-
-\begin_layout Standard
 The system of PowerEnjoy service is composed by a three layers architecture:
 \end_layout
 
@@ -1254,7 +1248,7 @@ Hight Level Component View
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -2325,7 +2319,7 @@ JDBC with ODBC
 
 \begin_layout Standard
 This protocolos is used to manage the connection between database and Applicatio
-n server (<TODO> spiegare meglio)
+n server.
 \end_layout
 
 \begin_layout Paragraph
@@ -2391,11 +2385,6 @@ Adapter
 Used in order to make the JavaEE Application server work with Jersey framework
  and consequently with RESTful and JSON, needed in order to build the mobile
  application using PhoneGap.
-\end_layout
-
-\begin_layout Standard
-<TODO: insomma dovremmo fare un po' di ricerche per capire queste cose,
- poi le servlet e JPA e JDBC boh io ci ho provato.>
 \end_layout
 
 \begin_layout Paragraph
