--- a/work_in_progress/DD/DD_version_1.lyx
+++ b/work_in_progress/DD/DD_version_1.lyx
@@ -3860,6 +3860,24 @@ total
 
 \end_layout
 
+\begin_layout Section
+Changelog
+\end_layout
+
+\begin_layout Itemize
+version 2.1
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+fix component diagram, Map Gateway added;
+\end_layout
+
+\begin_layout Itemize
+fix Finish the ride sequence diagram.
+\end_layout
+
+\end_deeper
 \begin_layout Standard
 \begin_inset FloatList figure
 
